--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="column">
                 <section>
                     <h2>Presentación</h2>
-                    <p>Soy [Tu nombre], ¡y esta es mi primera página web!</p>
+                    <p>Soy Pepi, ¡y esta es mi primera página web!</p>
                     <p>Estoy aprendiendo desarrollo web para crear sitios web visualmente atrapantes y funcionales.</p>
                 </section>
             </div>
